@@ -1,6 +1,9 @@
 CHANGES IN FLTK 1.1.0
 
 	- Documentation updates.
+	- Added a Fl_Widget::redraw_label() method which flags a
+	  redraw of the appropriate area.  This helps to
+	  eliminate flicker when updating the value of a widget.
 	- Fl_Wizard::value() now resets the mouse cursor to the
 	  window's default cursor.
 	- Fl_File_Chooser::type() didn't enable/disable the new
